--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    background: url('https://source.unsplash.com/1600x900/?asia');
+    background-position: center;
+    background-size: cover;
 }
 
 #container {
@@ -17,6 +20,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    background: #222;
+    opacity: .4;
 }
 
 #container img {
@@ -64,16 +69,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 30px 0;
 }
 
-#day span {
-    font-size: 20px;
+.flex {
+    display: flex;
 }
 
 #degree {
     font-size: 50px;
     color: #fff;
     font-weight: 700;
+}
+
+#icon {
+    height: 50px;
 }
 
 .search {
@@ -118,7 +128,7 @@
     font-size: 17px;
     font-weight: 700;
     outline: none;
-    color: #222;
+    color: #fff;
     border-bottom: 1px solid #fff;
     background-color: transparent;
 }
@@ -128,7 +138,7 @@
 }
 
 #search_input::placeholder {
-    color: #333;
+    color: #fff;
 }
 
 @media only screen and (max-width: 630px) {
@@ -152,4 +162,24 @@
     #time {
         font-size: 30px;
     }
+}
+
+.weather_info.loading {
+    visibility: hidden;
+    height: 100%;
+    width: 50%;
+    border-radius: 0 50px 50px 0;
+    backdrop-filter: blur(5px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.weather_info.loading:active {
+    visibility: visible;
+    content: "Loading...";
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
 }
