--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 .weather_info {
-    height: 100%;
+    min-height: 100vh;
     width: 50%;
     border-radius: 0 50px 50px 0;
     backdrop-filter: blur(5px);
@@ -92,7 +92,7 @@
 .search {
     position: relative;
     width: 50%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -149,14 +149,14 @@
         flex-direction: column-reverse;
     }
     .weather_info {
-        height: 70%;
+        min-height: 70vh;
         width: 100%;
         border-radius: 25px 25px 0 0;
     }
     .search {
         position: relative;
         width: 100%;
-        height: 30%;
+        min-height: 30vh;
         display: flex;
     }
     .city {
